# Lapse

./: .gitignore  BUILD.md  Cargo.toml  PKGBUILD  README.md  install.sh  uninstall.sh
lapse-0.1.0/: lapse.desktop
packaging/aur/: .SRCINFO  PKGBUILD
src/: audio.rs  config.rs  gui.rs  hotkeys.rs  ipc.rs  main.rs  recorder.rs
