[package]
name = "lapse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rdev = "0.5" # Global hotkey listener
eframe = "0.26" # UI framework (egui wrapper)
anyhow = "1.0"
directories = "5.0"
signal-hook = "0.3" # Handle termination signals
notify-rust = "4.12.0"
rfd = "0.17.2"
rodio = "0.22.2"
