[package]
name = "lapse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rdev = "0.5" # Global hotkey listener
eframe = "0.26" # UI framework (egui wrapper)
anyhow = "1.0"
directories = "5.0"
signal-hook = "0.3" # Handle termination signals
notify-rust = "4.12.0"
rfd = "0.17.2"
rodio = "0.22.2"
tray-icon = "0.19.0"
muda = "0.15.2" # For tray menu
image = "0.24"
gtk = "0.18"
chrono = "0.4.38"
open = "5.1"
egui_extras = { version = "0.26", features = ["all_loaders"] }
