[package]
name = "lapse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rdev = "0.5" 
eframe = "0.26" 
anyhow = "1.0"
directories = "5.0"
signal-hook = "0.3" 
notify-rust = "4.12.0"
rfd = "0.17.2"
rodio = "0.22.2"
tray-icon = "0.19.0"
muda = "0.15.2" # For tray menu
image = "0.24"
gtk = "0.18"
chrono = "0.4.38"
open = "5.1"
egui_extras = { version = "0.26", features = ["all_loaders"] }

[package.metadata.deb]
maintainer = "Ersin Can Karaca <canersinkaraca@gmail.com>"
copyright = "2026, Ersin Can Karaca"
license-file = ["LICENSE", "0"]
depends = "$auto, gtk3, libwayland-client0"
assets = [
    # [Yerel Dosya Yolu, Hedef Sistemdeki Yolu, İzinler]
    ["target/release/lapse", "usr/bin/lapse", "755"],
    ["assets/lapse.desktop", "usr/share/applications/lapse.desktop", "644"],
    
    # İkon Dosyası
    ["assets/icon.png", "usr/share/pixmaps/lapse.png", "644"],
    
    # Ses Dosyası
    ["assets/shutter.ogg", "usr/share/sounds/lapse/shutter.ogg", "644"],
]